# twirp-cpp

./: .gitignore  Dockerfile  MIT-LICENSE.txt  README.md  build.sh  conanfile.py  run-example.sh
.github/workflows/: main.yml
example/cpp/: CMakeLists.txt  README.md  conanfile.py  tw-client.cpp  tw-server.cpp
example/cpp/proto/: service.proto
example/golang/: go.mod  tools.go
example/golang/example/: service.pb.go  service.twirp.go
example/golang/main/: main.go
example/proto/: service.proto
include/twirp/: error-defs.h  rpc-defs.h
include/twirp/httplib/: client-helper.h  server-helper.h
src/: go.mod  go.sum
src/dumper/: protodump.go
src/twirpcpp/: gencpp.go  templates.go
src/twirpcpp/main/: main.go
test_package/: CMakeLists.txt  conanfile.py  conanfile.txt
test_package/proto/: service1.proto
test_package/proto/validate/: validate.proto
test_package/tests/: WSProviderClient.cpp  WSProviderClient.h  WSProviderService.cpp  WSProviderService.h  arena_helper.h  rpc-tests.cpp  rpc_helper.h
